--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-body {   
-    height: 100vh;
-  /*   background-image: url("../img/fundo.svg");
-    background-repeat: no-repeat;
-    background-position: center; */
-}
 #inserir_palavra {
     display: flex;
     justify-content: center;
@@ -23,7 +17,6 @@ body {
     display: flex;
     justify-content: center;
     font-size: 20pt;
-    margin-top: 20px;
 }
 #txtErradas {
     text-transform: uppercase;
@@ -39,16 +32,12 @@ body {
     font-size: 20pt;
     margin-top: 10px;
 }
-tr {
-    font-size: 15pt;
-    /* text-transform: uppercase; */
-}
 .palavra_secreta {
     background-color: bisque;
 }
-
 #chute {
     display: flex;
+    margin-top: 10px;
     justify-content: center;
     gap: 10px;
 }
@@ -67,6 +56,8 @@ tr {
   font-size: 15pt;
 }
 #boneco {
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
 }
