--- a/css/style.css
+++ b/css/style.css
@@ -52,22 +52,24 @@
 #digita_chute {
     color: yellowgreen;
     outline: none;
-    width: 94px;
-    height: 94px;
-    font-size: 70pt;
+    width: 70px;
+    height: 33px;
+    font-size: 20pt;
     text-align: center;
     /* text-transform: uppercase; */
 }
 #bt_chute {
-  width: 100px;
-  height: 100px;
-  font-size: 15pt;
+  width: 70px;
+  height: 40px;
+  font-size: 10pt;
 }
 #boneco {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 0;
     display: flex;
     justify-content: center;
+}
+#trocaImg {
+    width: 250px;
 }
 .boneco {
     display: none;
