--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    margin: 0;
+}
 #inserir_palavra {
     display: flex;
     justify-content: center;
@@ -22,30 +25,24 @@
     text-transform: uppercase;
     display: flex;
     justify-content: center;
-    margin-top: 10px;
-
 }
 .alerta {
     color: red;
     text-transform: uppercase;
     display: flex;
     justify-content: center;
-    margin-top: 10px;
-
 }
 .letras_erradas {
     display: flex;
     justify-content: center;
     text-align: center;
     font-size: 20pt;
-    margin-top: 10px;
 }
 .palavra_secreta {
     background-color: bisque;
 }
 #chute {
     display: flex;
-    margin-top: 10px;
     justify-content: center;
     gap: 10px;
 }
@@ -64,13 +61,24 @@
   font-size: 10pt;
 }
 #boneco {
-    margin: 0;
     display: flex;
     justify-content: center;
+    position: absolute;
+    width: 100%;
 }
-#trocaImg {
-    width: 250px;
+#boneco img {
+    width: 100%;
+}
+#flutua {
+    position: absolute;
+    top: 50%;
+    left: 33%;
 }
 .boneco {
     display: none;
   }
+#resultado {
+    position: absolute;
+    top: 50%;
+    left: 33%;
+}
