--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
 }
 #inserir_palavra {
     display: flex;
+    position: absolute;
+    top: 20px;
+    left: 20px;
     justify-content: center;
     text-align: center;
     gap: 10px;
@@ -26,6 +29,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: 20pt;
+    margin-top: 10px;
 }
 #txtErradas {
     text-transform: uppercase;
@@ -44,7 +48,7 @@ body {
     justify-content: center;
     text-align: center;
     font-size: 20pt;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 .palavra_secreta {
     background-color: bisque;
@@ -100,6 +104,9 @@ body {
     position: absolute;
     top: 50%;
     left: 33%;
+    background-color: #ece7e1;
+    box-shadow: 2px 2px 9px 2px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
     width: 250px;
     height: 350px;
 }
@@ -117,7 +124,7 @@ body {
 }
 .bt_novo_jogo {
     font-family: 'Oswald', sans-serif;
-    margin-top: 20px;
+    margin-top: 10px;
     background: #f09b41;
     background-image: -webkit-linear-gradient(top, #f09b41, #d6be20);
     background-image: -moz-linear-gradient(top, #f09b41, #d6be20);
