--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
 }
 #chute {
     display: flex;
+    align-items: center;
     justify-content: center;
     gap: 10px;
     margin-top: 20px;
@@ -75,7 +76,7 @@ body {
     box-shadow: 2px 2px 9px 2px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     width: 250px;
-    height: 340px;
+    height: 310px;
 }
 #resultado {
     position: absolute;
@@ -107,8 +108,8 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #eeede8;
-    width: 400px;
-    height: 270px;
+    width: 310px;
+    height: 300px;
     border-radius: 10px;
 }
 #inputInserir {
@@ -129,6 +130,6 @@ body {
 }
 #btmais {
     position: absolute;
-    top: 10px;
+    top: 100px;
     left: 10px;
 }
