--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
     text-align: center;
     color: #416ac2;
     font-weight: 700;
-    
 }
 #exibe_palavra {
     display: flex;
@@ -129,11 +128,14 @@ body {
 .bts:hover {
     background-color: #4777dd;
 }
-#btmais {
+#doisBotoes {
     position: absolute;
+    display: grid;
     top: 110%;
-    left: 0;
+    width: 100%;
+    gap: 20px;
 }
+
 #bt_fecha {
     display: flex;
     justify-content: right;
@@ -147,12 +149,6 @@ body {
     color: red;
     font-weight: bold;
 }
-#verPalavras {
-    cursor: pointer;
-    position: absolute;
-    top: 110%;
-    right: 0;
-}
 #fundo_tabela {
     display:grid;
     padding: 10px 0 20px 0;
@@ -162,6 +158,7 @@ body {
     width: 310px;
     height: 350px;
     border-radius: 10px;
+    gap: 5px;
 }
 #espiar {
     background-color: rgba(0, 0, 0, 0.9);
@@ -172,4 +169,34 @@ body {
     right: 0;
     align-items: center;
     justify-content: center;
+}
+#mostra_secretas {
+    background-color: transparent;
+    border-radius: 5px;
+    margin-top: 15px;
+    resize: none;
+    color: #416ac2;
+    font-size: 11pt;
+    font-weight: bold;
+}
+#meusLinks {
+    position: absolute;
+    background-color: #567cce;
+    display: flex;
+    width: 100%;
+    height: 60px;
+    top: 110%;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+#topo {
+    background-color: #567cce;
+    display: flex;
+    width: 100%;
+    height: 60px;
+    top: 110%;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
 }
