--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ body {
     text-align: center;
     text-transform: uppercase;
 }
-
 #boneco {
     display: flex;
     justify-content: center;
@@ -68,7 +67,7 @@ body {
     width: 100%;
 }
 #flutua {
-    position: absolute;
+    position:absolute;
     top: 45%;
     left: 33%;
     background-color: #ece7e1;
@@ -207,15 +206,19 @@ body {
     font-weight: bold;
 }
 #meusLinks {
-    position: absolute;
-    background-color: #567cce;
+    position:absolute;
+    background-color: transparent;
     display: flex;
-    width: 100%;
-    height: 60px;
-    top: 110%;
-    justify-content: center;
+    top: 0.6%;
+    right: 5%;
     align-items: center;
     gap: 50px;
+}
+.bt_links {
+    background-color: rgba(228, 222, 222, 0.2);
+    border-radius: 5px;
+    padding: 5px;
+    height: 30px;
 }
 #meusLinks a{
     margin-top: 5px;   
@@ -223,10 +226,11 @@ body {
 #topo {
     background-color: #567cce;
     display: flex;
-    width: 100%;
+    width: 97%;
     height: 60px;
     top: 110%;
-    justify-content: center;
+    padding-left: 3%;
+    justify-content: left;
     align-items: center;
     gap: 50px;
 }
